[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2009???? - 1.23.91

[+] * PostgreSQL backend now supports IDs for RunOnReceive.
[+] * RunOnReceive is started through shell not directly.
[-] * Fixed reading of empty phonebook entries from Samsung (bug #809).
[-] * Reread messages if CMGL shows them corrupted (bug #691).
[+] * Added support for vNote files.
    
20090311 - 1.23.90

[-] * Fixed decoding of Samsung memory entries.
[-] * Properly handle corrupted messages from Nokia phones (bug #811).
[-] * Fix parsing of calls from Alcatel C701 (bug #831).
[-] * Fixed handling of error states with -len and -autolen parameters.
[-] * Fixed possible crash in DBI engine.
[+] * PostgreSQL engine properly uses sequences instead of reinventing.
[+] * MySQL engine properly uses auto increments instead of reinventing.
[-] * Fix escaping of field name in PostgreSQL engine.
[-] * Better SMSD files logging.
[-] * Added testing of SMSD files engine.
[-] * Increase timeout for AT settings SIM card SMS storage.
[-] * Fixed date formatting in PostgreSQL SMSD service.
[+] * Add option to install without documentation.
[+] * Add -textutf8 option for TEXT sms.
[-] * Fix crash when some lines in config are too long.
[-] * Make smsdrc example better looking by removing obsolete docs.
[-] * Make dku2 connection types work on Linux (alias to fbususb).
[-] * Better calculation of signal percent.
[-] * Fixed getting of memory status for some Nokias (bug #836).
    
20090302 - 1.23.1

[-] * Documentation clarification.
[-] * Translations update.
[-] * Actually install gammu-smsd-monitor.
[-] * Fix recording received messages count for MySQL.
[-] * Fix SMS location handling for Huawei E160 (bug #825).
[-] * Do not probe for MPBR support all the time.
    
20090223 - 1.23.0

[-] * Fix sending of DTMF tones over AT.
[-] * Skip some unhandled replies on Huawei (bug #823).
    
20090217 - 1.22.95

[!] * Reorganize directory structure to match current state of things.