@@ -52,6 +52,9 @@ static GSM_Error N6510_ReplyGetMemory(GSM_Protocol_Message msg, GSM_StateMachine
 	smprintf(s, "Phonebook entry received\n");
 	if (msg.Buffer[6] == 0x0f)
 		return N71_65_ReplyGetMemoryError(msg.Buffer[10], s);
+	/* Empty number ?? */
+	if (msg.Buffer[6] == 0x01)
+		return ERR_EMPTY;
 
 	if (msg.Length < 22) {
 		return ERR_UNKNOWN;
@@ -4280,7 +4283,7 @@ static GSM_Reply_Function N6510ReplyFunctions[] = {
 };
 
 GSM_Phone_Functions N6510Phone = {
-	"1100|1100a|1100b|1112|1200|2600|2610|2630|2650|2680|2760|3100|3100b|3105|3108|3109c|3200|3200a|3205|3220|3300|3510|3510i|3530|3589i|3590|3595|5000|5100|5140|5140i|5200|5300|5310|6020|6021|6030|6060|6070|6085|6086|6100|6101|6103|6111|6125|6131|6151|6170|6200|6220|6230|6230i|6233|6234|6270|6280|6300|6310|6310i|6385|6500c|6500s|6510|6610|6610i|6800|6810|6820|6822|7200|7210|7250|7250i|7260|7270|7360|7370|7600|7900|8310|8390|8800|8910|8910i",
+	"1100|1100a|1100b|1112|1200|2600|2610|2630|2650|2680|2760|3100|3100b|3105|3108|3109c|3200|3200a|3205|3220|3300|3510|3510i|3530|3589i|3590|3595|5000|5100|5140|5140i|5200|5300|5310|6020|6021|6030|6060|6070|6085|6086|6100|6101|6103|6111|6125|6131|6151|6170|6200|6220|6220c|6230|6230i|6233|6234|6270|6280|6300|6310|6310i|6385|6500c|6500s|6510|6610|6610i|6800|6810|6820|6822|7200|7210|7250|7250i|7260|7270|7360|7370|7600|7900|8310|8390|8800|8910|8910i",
 	N6510ReplyFunctions,
 	N6510_Initialise,
 	NONEFUNCTION,			/*	Terminate 		*/
